--- a/phonicFun.html
+++ b/phonicFun.html
@@ -11,13 +11,13 @@
 <body>
     <div class="container">
         <header class="row">
-            <div class="col-6 offset-3 offset-md-0">
+            <div class="col-md-6 offset-md-3">
                 <h1>Phonic Fun</h1>                
             </div>
         </header>
 
         <div class="row">
-            <div class="col-8 offset-2 offset-md-0">
+            <div class="col-md-8 offset-md-2">
                 <h2>Challenge Yourself with Letters !</h2>                
             </div>
         </div>
@@ -26,7 +26,8 @@
             <div class="row" id="section-1">                
 
                 <div class="col-md-5" id="scoresletter">
-                    <div class="playerA"> Player A Score</div>                
+                    <div class="playerA"> Player A Score</div>
+                    <div class="scoreA"> Score</div>                                
                 </div>
 
                 <div class="col-md-2" id="randomSound">
@@ -35,14 +36,15 @@
                 </div>
 
                 <div class="col-md-5" id="scoresletter">
-                    <div class="playerB">Player B Score</div>                
+                    <div class="playerB">Player B Score</div>  
+                    <div class="scoreB">Score</div>                                              
                 </div>
                 
                 </div>
             </div>
 
             <div class="row" id="section-2">
-                <div class="col-10 offset-1 offset-md-0" id="letters-box">
+                <div class="col-md-10 offset-md-1" id="letters-box">
                     <div class="letters">letter 1</div>
                     <div class="letters">letter 2</div>
                     <div class="letters">letter 3</div>
@@ -55,13 +57,13 @@
         </main>
 
         <div class="row">
-            <div class="col-4 offset-4 offset-md-0">
+            <div class="col-md-4 offset-md-4">
                 <div class="nextRound">Time for the Next Round</div>                
             </div>
         </div>
         
         <div class="row">
-            <div class="col-4 offset-4 offset-md-0">
+            <div class="col-md-4 offset-md-4">
                 <div class="resetGame">Reset the Game</div>                
             </div>
         </div>
