--- a/phonicFun.html
+++ b/phonicFun.html
@@ -21,22 +21,28 @@
                 <h2>Challenge Yourself with Letters !</h2>                
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-8 offset-md-2" id="roundNumber">
+                <h3></h3>                
+            </div>
+        </div>
     
         <main>
             <div class="row" id="section-1">                
 
-                <div class="col-md-5" id="scoresletter">
-                    <div class="playerA"> Player A Score</div>
+                <div class="col-md-5" id="playerA">
+                    <div> Player A Score</div>
                     <div class="scoreA"> Score</div>                                
                 </div>
 
                 <div class="col-md-2" id="randomSound">
-                    <img src="img/sound.svg" alt="">
+                    <img src="img/sound.svg" alt="" id="generateSound">
                     <audio id="audioContainer" type="hidden"></audio>
                 </div>
 
-                <div class="col-md-5" id="scoresletter">
-                    <div class="playerB">Player B Score</div>  
+                <div class="col-md-5" id="playerB">
+                    <div>Player B Score</div>  
                     <div class="scoreB">Score</div>                                              
                 </div>
                 
@@ -45,12 +51,13 @@
 
             <div class="row" id="section-2">
                 <div class="col-md-10 offset-md-1" id="letters-box">
-                    <div class="letters">letter 1</div>
-                    <div class="letters">letter 2</div>
-                    <div class="letters">letter 3</div>
-                    <div class="letters">letter 4</div>
-                    <div class="letters">letter 5</div>
-                    <div class="letters">letter 6</div>
+                    <!-- Approach1
+                    <div class="letters"></div>
+                    <div class="letters"></div>
+                    <div class="letters"></div>
+                    <div class="letters"></div>
+                    <div class="letters"></div>
+                    <div class="letters"></div> -->
                 </div>
             </div>
 
@@ -70,6 +77,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="scripts/app.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
