initial thoughts about the score function

--- a/phonicFun.html
+++ b/phonicFun.html
@@ -33,7 +33,7 @@
 
                 <div class="col-md-5" id="playerA">
                     <div> Player A Score</div>
-                    <div class="scoreA"> Score</div>                                
+                    <div class="scoreA"></div>                                
                 </div>
 
                 <div class="col-md-2" id="randomSound">
@@ -43,7 +43,7 @@
 
                 <div class="col-md-5" id="playerB">
                     <div>Player B Score</div>  
-                    <div class="scoreB">Score</div>                                              
+                    <div class="scoreB"></div>                                              
                 </div>
                 
                 </div>
