--- a/phonicFun.html
+++ b/phonicFun.html
@@ -33,7 +33,7 @@
 
                 <div class="col-md-5" id="playerA">
                     <div> Player A Score</div>
-                    <div class="scoreA"></div>                                
+                    <div class="scoreA">0</div>                                
                 </div>
 
                 <div class="col-md-2" id="randomSound">
@@ -43,7 +43,7 @@
 
                 <div class="col-md-5" id="playerB">
                     <div>Player B Score</div>  
-                    <div class="scoreB"></div>                                              
+                    <div class="scoreB">0</div>                                              
                 </div>
                 
                 </div>
@@ -70,8 +70,8 @@
         </div>
         
         <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="resetGame">Reset the Game</div>                
+            <div class="col-md-4 offset-md-4" id="resetGame">
+                <div>Reset the Game</div>                
             </div>
         </div>
 
