Fix score and animation bugs

--- a/phonicFun.html
+++ b/phonicFun.html
@@ -27,6 +27,11 @@
                 <h3></h3>                
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-8 offset-md-2" id="currentTrial">
+                <h4></h4>                
+            </div>
+        </div>
     
         <main>
             <div class="row" id="section-1">                
@@ -71,7 +76,7 @@
         
         <div class="row">
             <div class="col-md-4 offset-md-4" id="resetGame">
-                <div>Reset the Game</div>                
+                <div>Game Reset</div>                
             </div>
         </div>
 
