--- a/phonicFun.html
+++ b/phonicFun.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 offset-md-2" id="currentTrial">
+            <div class="col-md-8 offset-md-2" id="questionNumber">
                 <h4></h4>                
             </div>
         </div>
