--- a/phonicFun.html
+++ b/phonicFun.html
@@ -71,7 +71,7 @@
 
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <div class="nextRound">Time for the Next Round</div>                
+                <div id="nextRound">Next Round</div>                
             </div>
         </div>
         
