--- a/phonicFun.html
+++ b/phonicFun.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         
-        <!-- Modal -->
+        <!-- Modal to Annouce the winners -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -99,10 +99,29 @@
             </div>
         </div>
 
-        <!-- Button trigger modal -->
+        <!-- Button trigger winner modal -->
         <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             Launch static backdrop modal
         </button> -->
+
+
+        <!-- Welcoming Modal -->
+        <div class="modal fade" id="welcomingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content text-center">
+                <div class="modal-header border-0 text-center">
+                  <h5 class="modal-title text-center" id="exampleModalLabel">Are you ready?</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>Click "Start Playing" to begin.</p>
+                </div>
+                <div class="modal-footer justify-content-center border-0">
+                  <button type="button" class="btn btn-primary" id="startGame">Start Playing</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
