--- a/phonicFun.html
+++ b/phonicFun.html
@@ -39,7 +39,7 @@
 
                 <div class="col-md-5" id="playerA">
                     <div> Player A Score</div>
-                    <div class="scoreA">0</div>                                
+                    <div class="scoreA"></div>                                
                 </div>
 
                 <div class="col-md-2" id="randomSound">
@@ -49,7 +49,7 @@
 
                 <div class="col-md-5" id="playerB">
                     <div>Player B Score</div>  
-                    <div class="scoreB">0</div>                                              
+                    <div class="scoreB"></div>                                              
                 </div>
                 
                 </div>
@@ -121,7 +121,26 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
+
+        <!-- Game End Modal -->
+        <div class="modal fade" id="endGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header border-0 text-center">
+                <h1 class="modal-title fs-5 text-primary"><strong>Congratulations!</strong></h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                <p>The Round Winner is: <span id="gameWinner"></span></p>
+                </div>
+                <div class="modal-footer justify-content-center border-0">
+                <button type="button" class="btn btn-secondary" id ="restartGame" data-bs-dismiss="modal">Restart Game</button>
+                </div>
+            </div>
+            </div>
+        </div>
+          
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
