--- a/phonicFun.html
+++ b/phonicFun.html
@@ -132,7 +132,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                <p>The Round Winner is: <span id="gameWinner"></span></p>
+                <p>The Game has Ended ! </p>
+                <p> Winner is: <span id="gameWinner"></span></p>
                 </div>
                 <div class="modal-footer justify-content-center border-0">
                 <button type="button" class="btn btn-secondary" id ="restartGame" data-bs-dismiss="modal">Restart Game</button>
