Editing the Page Layout

--- a/phonicFun.html
+++ b/phonicFun.html
@@ -11,13 +11,13 @@
 <body>
     <div class="container">
         <header class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="col-md-6 offset-md-3" id="header-container">
                 <h1>Phonic Fun</h1>                
             </div>
         </header>
 
         <div class="row">
-            <div class="col-md-8 offset-md-2">
+            <div class="col-md-8 offset-md-2" id="slogan">
                 <h2>Challenge Yourself with Letters !</h2>                
             </div>
         </div>
@@ -103,7 +103,6 @@
         <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             Launch static backdrop modal
         </button> -->
-
 
         <!-- Welcoming Modal -->
         <div class="modal fade" id="welcomingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
