Editting Style/layout ..

--- a/phonicFun.html
+++ b/phonicFun.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="col-md-2" id="randomSound">
-                    <img src="img/sound.svg" alt="" id="generateSound">
+                    <img src="img/sound2.png" alt="" id="generateSound">
                     <audio id="audioContainer" type="hidden"></audio>
                 </div>
 
@@ -71,15 +71,12 @@
 
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <div id="nextRound">Next Round</div>                
+              <div class="button-box">
+                <div id="nextRound">Next Round</div>
+                <div id="resetGame">Game Reset</div>
+              </div>
             </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-4 offset-md-4" id="resetGame">
-                <div>Game Reset</div>                
-            </div>
-        </div>
+          </div>
         
         <!-- Modal to Annouce the winners -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
