--- a/phonicFun.html
+++ b/phonicFun.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <title>Phonic Fun</title>
 </head>
@@ -57,13 +60,7 @@
 
             <div class="row" id="section-2">
                 <div class="col-md-10 offset-md-1" id="letters-box">
-                    <!-- Approach1
-                    <div class="letters"></div>
-                    <div class="letters"></div>
-                    <div class="letters"></div>
-                    <div class="letters"></div>
-                    <div class="letters"></div>
-                    <div class="letters"></div> -->
+
                 </div>
             </div>
 
