--- a/phonicFun.html
+++ b/phonicFun.html
@@ -46,7 +46,8 @@
                 </div>
 
                 <div class="col-md-2" id="randomSound">
-                    <img src="img/sound2.png" alt="" id="generateSound">
+                    <!-- <img src="img/sound2.png" alt="" id="generateSound"> -->
+                    <img src="img/sound.svg" alt="" id="generateSound">
                     <audio id="audioContainer" type="hidden"></audio>
                 </div>
 
@@ -60,7 +61,7 @@
 
             <div class="row" id="section-2">
                 <div class="col-md-10 offset-md-1" id="letters-box">
-
+                    <audio id="audioAnswer" type="hidden"></audio>
                 </div>
             </div>
 
